--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/picker": "^1.6.6",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/react-redux": "^7.1.9",
     "axios": "^0.20.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -21,7 +22,10 @@
     "react-native-picker-select": "^8.0.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
